--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
   width: 127px;
   height: 158px;
   overflow: hidden;
-  background: #c0c0c0;
+  background: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
