--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,18 @@ html, body {
   object-fit: contain;
   visibility: hidden;
 }
+
+#start {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  width: 127px; 
+  height: 158px;
+  z-index: 10;
+}
+
+#start img {
+  width: 100%;
+  height: 100%;
+}
